@@ -11,6 +11,7 @@ import androidx.annotation.WorkerThread;
 import androidx.documentfile.provider.DocumentFile;
 import androidx.lifecycle.AndroidViewModel;
 import androidx.lifecycle.LiveData;
+import androidx.lifecycle.MediatorLiveData;
 import androidx.lifecycle.MutableLiveData;
 
 import com.annimon.stream.Stream;
@@ -25,18 +26,19 @@ import java.util.List;
 
 import javax.annotation.Nonnull;
 
+import io.reactivex.Completable;
 import io.reactivex.Single;
 import io.reactivex.android.schedulers.AndroidSchedulers;
 import io.reactivex.disposables.CompositeDisposable;
+import io.reactivex.disposables.Disposable;
+import io.reactivex.disposables.Disposables;
 import io.reactivex.schedulers.Schedulers;
-import me.devsaki.hentoid.HentoidApp;
 import me.devsaki.hentoid.R;
+import me.devsaki.hentoid.database.CollectionDAO;
 import me.devsaki.hentoid.database.ObjectBoxDAO;
-import me.devsaki.hentoid.database.ObjectBoxDB;
 import me.devsaki.hentoid.database.domains.Content;
 import me.devsaki.hentoid.database.domains.ImageFile;
 import me.devsaki.hentoid.enums.StatusContent;
-import me.devsaki.hentoid.listener.PagedResultListener;
 import me.devsaki.hentoid.util.Consts;
 import me.devsaki.hentoid.util.ContentHelper;
 import me.devsaki.hentoid.util.FileHelper;
@@ -46,36 +48,39 @@ import me.devsaki.hentoid.widget.ContentSearchManager;
 import timber.log.Timber;
 
 import static android.os.Build.VERSION_CODES.LOLLIPOP;
-import static com.annimon.stream.Collectors.toList;
 
 
-public class ImageViewerViewModel extends AndroidViewModel implements PagedResultListener<Long> {
+public class ImageViewerViewModel extends AndroidViewModel {
 
     private static final String KEY_IS_SHUFFLED = "is_shuffled";
 
+    // Collection DAO
+    private final CollectionDAO collectionDao = new ObjectBoxDAO(getApplication().getApplicationContext());
+
     // Settings
     private boolean isShuffled = false;                                              // True if images have to be shuffled; false if presented in the book order
+    private boolean showFavourites = false;                                          // True if viewer only shows favourite images; false if shows all pages
     private BooleanConsumer onShuffledChangeListener;
 
     // Collection data
     private final MutableLiveData<Content> content = new MutableLiveData<>();        // Current content
     private List<Long> contentIds = Collections.emptyList();                         // Content Ids of the whole collection ordered according to current filter
     private int currentContentIndex = -1;                                            // Index of current content within the above list
-    private long loadedContentId = -1;                                               // Content ID that has been initially loaded
+    private long loadedBookId = -1;                                                  // ID of currently loaded book
 
     // Pictures data
-    private final MutableLiveData<List<ImageFile>> images = new MutableLiveData<>();    // Currently displayed set of images
+    private LiveData<List<ImageFile>> currentImageSource;
+    private final MediatorLiveData<List<ImageFile>> images = new MediatorLiveData<>();    // Currently displayed set of images
     private final MutableLiveData<Integer> startingIndex = new MutableLiveData<>();     // 0-based index of the current image
 
     // Technical
-    private ContentSearchManager searchManager = null;
     private final CompositeDisposable compositeDisposable = new CompositeDisposable();
-
+    private Disposable searchDisposable = Disposables.empty();
 
     public ImageViewerViewModel(@NonNull Application application) {
         super(application);
-        content.setValue(null); // Default content; tells everyone nothing has been loaded yet
     }
+
 
     @NonNull
     public LiveData<List<ImageFile>> getImages() {
@@ -107,41 +112,72 @@ public class ImageViewerViewModel extends AndroidViewModel implements PagedResul
 
     public void loadFromContent(long contentId) {
         if (contentId > 0) {
-            ObjectBoxDB db = ObjectBoxDB.getInstance(getApplication().getApplicationContext());
-            Content loadedContent = db.selectContentById(contentId);
+            Content loadedContent = collectionDao.selectContent(contentId);
             if (loadedContent != null)
                 processContent(loadedContent);
         }
     }
 
     public void loadFromSearchParams(long contentId, @Nonnull Bundle bundle) {
-        loadedContentId = contentId;
-        Context ctx = getApplication().getApplicationContext();
-        searchManager = new ContentSearchManager(new ObjectBoxDAO(ctx));
+        // Technical
+        ContentSearchManager searchManager = new ContentSearchManager(collectionDao);
         searchManager.loadFromBundle(bundle);
-//        int contentIndex = bundle.getInt("contentIndex", -1);
-//        if (contentIndex > -1) searchManager.setCurrentPage(contentIndex);
-        searchManager.searchLibraryForId(this);
-    }
 
-    @Override
-    public void onPagedResultReady(List<Long> results, long totalSelectedContent, long totalContent) {
-        contentIds = results;
-        loadFromContent(loadedContentId);
-    }
-
-    @Override
-    public void onPagedResultFailed(Long contentId, String message) {
-        ToastUtil.toast("Book list loading failed");
+        searchDisposable.dispose();
+        searchDisposable = searchManager.searchLibraryForId().subscribe(
+                list -> {
+                    contentIds = list;
+                    loadFromContent(contentId);
+                },
+                throwable -> {
+                    Timber.w(throwable);
+                    ToastUtil.toast("Book list loading failed");
+                }
+        );
     }
 
     public void setStartingIndex(int index) {
         startingIndex.setValue(index);
     }
 
-    private void setImages(List<ImageFile> imgs) {
-        List<ImageFile> list = new ArrayList<>(imgs);
-        sortAndSetImages(list, isShuffled);
+    private void setImages(@NonNull Content content, @NonNull List<ImageFile> imgs) {
+        // Load new content
+        File[] pictureFiles = ContentHelper.getPictureFilesFromContent(content); // TODO this is called too often when viewing a queued book -> optimize !
+        if (pictureFiles != null && pictureFiles.length > 0) {
+            List<ImageFile> imageFiles;
+            if (imgs.isEmpty()) {
+                imageFiles = filesToImageList(pictureFiles);
+                content.setImageFiles(imageFiles);
+                collectionDao.insertContent(content);
+            } else {
+                imageFiles = new ArrayList<>(imgs);
+                matchFilesToImageList(pictureFiles, imageFiles);
+            }
+            sortAndSetImages(imageFiles, isShuffled);
+
+            if (content.getId() != loadedBookId) { // To be done once per book only
+                if (Preferences.isViewerResumeLastLeft())
+                    setStartingIndex(content.getLastReadPageIndex());
+                else
+                    setStartingIndex(0);
+            }
+
+            loadedBookId = content.getId();
+
+            // Cache JSON and record 1 more view for the new content
+            compositeDisposable.add(
+                    Single.fromCallable(() -> postLoadProcessing(content))
+                            .subscribeOn(Schedulers.io())
+                            .observeOn(AndroidSchedulers.mainThread())
+                            .subscribe(
+                                    v -> {
+                                    },
+                                    Timber::e
+                            )
+            );
+        } else {
+            ToastUtil.toast(R.string.no_images);
+        }
     }
 
     public void onShuffleClick() {
@@ -157,30 +193,61 @@ public class ImageViewerViewModel extends AndroidViewModel implements PagedResul
             Collections.shuffle(imgs);
         } else {
             // Sort images according to their Order
-            imgs = Stream.of(imgs).sortBy(ImageFile::getOrder).collect(toList());
+            imgs = Stream.of(imgs).sortBy(ImageFile::getOrder).toList();
         }
+
+        if (showFavourites)
+            imgs = Stream.of(imgs).filter(ImageFile::isFavourite).toList();
+
         for (int i = 0; i < imgs.size(); i++) imgs.get(i).setDisplayOrder(i);
+
         images.setValue(imgs);
     }
 
     @Override
     protected void onCleared() {
         super.onCleared();
-        if (searchManager != null) searchManager.dispose();
+        searchDisposable.dispose();
         compositeDisposable.clear();
     }
 
-    public void savePosition(int index) {
-        ObjectBoxDB db = ObjectBoxDB.getInstance(getApplication().getApplicationContext());
+    public void onLeaveBook(int index, int highestImageIndexReached) {
+        List<ImageFile> theImages = images.getValue();
         Content theContent = content.getValue();
-        if (theContent != null) {
-            int indexToSet = index;
-            // Reset the memorized page index if it represents the last page
-            List<ImageFile> theImages = getImages().getValue();
-            if (theImages != null && index == theImages.size() - 1) indexToSet = 0;
+        if (null == theImages || null == theContent) return;
 
-            theContent.setLastReadPageIndex(indexToSet);
-            db.insertContent(theContent);
+        int readThresholdPref = Preferences.getViewerReadThreshold();
+        int readThresholdPosition;
+        switch (readThresholdPref) {
+            case Preferences.Constant.PREF_VIEWER_READ_THRESHOLD_2:
+                readThresholdPosition = 2;
+                break;
+            case Preferences.Constant.PREF_VIEWER_READ_THRESHOLD_5:
+                readThresholdPosition = 5;
+                break;
+            case Preferences.Constant.PREF_VIEWER_READ_THRESHOLD_ALL:
+                readThresholdPosition = theImages.size() - 1;
+                break;
+            default:
+                readThresholdPosition = 1;
+        }
+
+        int indexToSet = index;
+        // Reset the memorized page index if it represents the last page
+        if (index == theImages.size() - 1) indexToSet = 0;
+
+        theContent.setLastReadPageIndex(indexToSet);
+        if (highestImageIndexReached + 1 >= readThresholdPosition)
+            ContentHelper.updateContentReads(getApplication(), collectionDao, theContent);
+        else collectionDao.insertContent(theContent);
+    }
+
+    public void toggleShowFavouritePages(Consumer<Boolean> callback) {
+        Content c = content.getValue();
+        if (c != null) {
+            showFavourites = !showFavourites;
+            processContent(c);
+            callback.accept(showFavourites);
         }
     }
 
@@ -206,6 +273,7 @@ public class ImageViewerViewModel extends AndroidViewModel implements PagedResul
                     callback.accept(result); // Inform the view
                 }
         }
+        compositeDisposable.clear();
     }
 
     /**
@@ -216,38 +284,97 @@ public class ImageViewerViewModel extends AndroidViewModel implements PagedResul
      * @return ImageFile with the new state
      */
     @WorkerThread
-    private static ImageFile togglePageFavourite(Context context, long imageId) {
-        ObjectBoxDB db = ObjectBoxDB.getInstance(context);
-
-        ImageFile img = db.selectImageFile(imageId);
+    private ImageFile togglePageFavourite(Context context, long imageId) {
+        ImageFile img = collectionDao.selectImageFile(imageId);
 
         if (img != null) {
             img.setFavourite(!img.isFavourite());
 
             // Persist it in DB
-            db.insertImageFile(img);
+            collectionDao.insertImageFile(img);
 
             // Persist in it JSON
-            Content content = img.content.getTarget();
-            if (!content.getJsonUri().isEmpty()) ContentHelper.updateJson(context, content);
-            else ContentHelper.createJson(content);
+            Content theContent = img.content.getTarget();
+            if (!theContent.getJsonUri().isEmpty()) ContentHelper.updateJson(context, theContent);
+            else ContentHelper.createJson(theContent);
 
             return img;
         } else
             throw new InvalidParameterException(String.format("Invalid image ID %s", imageId));
     }
 
+    public void deleteBook() {
+        Content targetContent = collectionDao.selectContent(loadedBookId);
+        if (null == targetContent) return;
+
+        // Unplug image source listener (avoid displaying pages as they are being deleted)
+        if (currentImageSource != null) images.removeSource(currentImageSource);
+
+        compositeDisposable.add(
+                Completable.fromRunnable(() -> doDeleteBook(targetContent))
+                        .subscribeOn(Schedulers.io())
+                        .observeOn(AndroidSchedulers.mainThread())
+                        .subscribe(
+                                () -> {
+                                    currentImageSource = null;
+                                    // Switch to the next book if the list is populated (multi-book)
+                                    if (!contentIds.isEmpty()) {
+                                        contentIds.remove(currentContentIndex);
+                                        if (currentContentIndex >= contentIds.size() && currentContentIndex > 0)
+                                            currentContentIndex--;
+                                        loadFromContent(contentIds.get(currentContentIndex));
+                                    } else { // Close the viewer if the list is empty (single book)
+                                        content.setValue(null);
+                                    }
+                                },
+                                e -> {
+                                    Timber.e(e);
+                                    // Restore image source listener on error
+                                    images.addSource(currentImageSource, imgs -> setImages(targetContent, imgs));
+                                }
+                        )
+        );
+    }
+
+    @WorkerThread
+    private void doDeleteBook(@NonNull Content targetContent) {
+        collectionDao.deleteQueue(targetContent);
+        ContentHelper.removeContent(targetContent, collectionDao);
+    }
+
+    public void deletePage(int pageIndex) {
+        compositeDisposable.add(
+                Completable.fromRunnable(() -> doDeletePage(pageIndex))
+                        .subscribeOn(Schedulers.io())
+                        .observeOn(AndroidSchedulers.mainThread())
+                        .subscribe(
+                                () -> { // Update is done through LiveData
+                                },
+                                Timber::e
+                        )
+        );
+    }
+
+    @WorkerThread
+    private void doDeletePage(int pageIndex) {
+        List<ImageFile> imageFiles = images.getValue();
+        if (imageFiles != null && imageFiles.size() > pageIndex)
+            ContentHelper.removePage(imageFiles.get(pageIndex), collectionDao, getApplication());
+    }
+
     public void loadNextContent() {
         if (currentContentIndex < contentIds.size() - 1) currentContentIndex++;
-        loadFromContent(contentIds.get(currentContentIndex));
+        if (!contentIds.isEmpty())
+            loadFromContent(contentIds.get(currentContentIndex));
     }
 
     public void loadPreviousContent() {
         if (currentContentIndex > 0) currentContentIndex--;
-        loadFromContent(contentIds.get(currentContentIndex));
+        if (!contentIds.isEmpty())
+            loadFromContent(contentIds.get(currentContentIndex));
     }
 
-    private void processContent(Content theContent) {
+    private void processContent(@NonNull Content theContent) {
         currentContentIndex = contentIds.indexOf(theContent.getId());
         if (-1 == currentContentIndex) currentContentIndex = 0;
 
@@ -255,39 +382,11 @@ public class ImageViewerViewModel extends AndroidViewModel implements PagedResul
         theContent.setLast(currentContentIndex >= contentIds.size() - 1);
         content.setValue(theContent);
 
-        // Load new content
-        File[] pictureFiles = ContentHelper.getPictureFilesFromContent(theContent);
-        if (pictureFiles != null && pictureFiles.length > 0) {
-            List<ImageFile> imageFiles;
-            if (null == theContent.getImageFiles() || theContent.getImageFiles().isEmpty()) {
-                imageFiles = new ArrayList<>();
-                saveFilesToImageList(pictureFiles, imageFiles, theContent);
-            } else {
-                imageFiles = new ArrayList<>(theContent.getImageFiles());
-                matchFilesToImageList(pictureFiles, imageFiles);
-            }
-            setImages(imageFiles);
-
-            if (Preferences.isViewerResumeLastLeft()) {
-                setStartingIndex(theContent.getLastReadPageIndex());
-            } else {
-                setStartingIndex(0);
-            }
-
-            // Cache JSON and record 1 more view for the new content
-            compositeDisposable.add(
-                    Single.fromCallable(() -> postLoadProcessing(getApplication().getApplicationContext(), theContent))
-                            .subscribeOn(Schedulers.io())
-                            .observeOn(AndroidSchedulers.mainThread())
-                            .subscribe(
-                                    v -> {
-                                    },
-                                    Timber::e
-                            )
-            );
-        } else {
-            ToastUtil.toast(R.string.no_images);
-        }
+        // Observe the content's images
+        // NB : It has to be dynamic to be updated when viewing a book from the queue screen
+        if (currentImageSource != null) images.removeSource(currentImageSource);
+        currentImageSource = collectionDao.getDownloadedImagesFromContent(theContent.getId());
+        images.addSource(currentImageSource, imgs -> setImages(theContent, imgs));
     }
 
     private static void matchFilesToImageList(File[] files, @Nonnull List<ImageFile> images) {
@@ -322,39 +421,37 @@ public class ImageViewerViewModel extends AndroidViewModel implements PagedResul
         }
     }
 
-    private static void saveFilesToImageList(File[] files, @Nonnull List<ImageFile> images, @Nonnull Content content) {
-        int order = 0;
+    private List<ImageFile> filesToImageList(@NonNull File[] files) {
+        List<ImageFile> result = new ArrayList<>();
+        int order = 1;
         // Sort files by name alpha
-        List<File> fileList = Stream.of(files).sortBy(File::getName).collect(toList());
+        List<File> fileList = Stream.of(files).sortBy(File::getName).toList();
         for (File f : fileList) {
-            order++;
             ImageFile img = new ImageFile();
             String name = FileHelper.getFileNameWithoutExtension(f.getName());
-            img.setName(name).setOrder(order).setUrl("").setStatus(StatusContent.DOWNLOADED).setAbsolutePath(f.getAbsolutePath());
-            images.add(img);
+            img.setName(name).setOrder(order++).setUrl("").setStatus(StatusContent.DOWNLOADED).setAbsolutePath(f.getAbsolutePath());
+            result.add(img);
         }
-        content.setImageFiles(images);
-        ObjectBoxDB.getInstance(HentoidApp.getInstance()).insertContent(content);
+        return result;
     }
 
     @WorkerThread
-    private static Content postLoadProcessing(@Nonnull Context context, @Nonnull Content content) {
-        cacheJson(context, content);
-        return ContentHelper.updateContentReads(context, content);
+    private Content postLoadProcessing(@Nonnull Content content) {
+        cacheJson(content);
+        return content;
     }
 
     // Cache JSON URI in the database to speed up favouriting
     // NB : Lollipop only because it must have _full_ support for SAF
     @WorkerThread
-    private static void cacheJson(@Nonnull Context context, @Nonnull Content content) {
+    private void cacheJson(@Nonnull Content content) {
         if (content.getJsonUri().isEmpty() && Build.VERSION.SDK_INT >= LOLLIPOP) {
             File bookFolder = ContentHelper.getContentDownloadDir(content);
             DocumentFile file = FileHelper.getDocumentFile(new File(bookFolder, Consts.JSON_FILE_NAME_V2), false);
             if (file != null) {
                 // Cache the URI of the JSON to the database
-                ObjectBoxDB db = ObjectBoxDB.getInstance(context);
                 content.setJsonUri(file.getUri().toString());
-                db.insertContent(content);
+                collectionDao.insertContent(content);
             } else {
                 Timber.e("File not detected : %s", content.getStorageFolder());
             }
